[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["mcfaby <unfound.name@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^1.9.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
